# Apollo-Federation

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.yml  dump.rdb  package-lock.json
.github/workflows/: rust.yml
accounts/: .env  .gitignore  Cargo.toml  Dockerfile  dump.rdb
accounts/migrations/2022-04-26-085217_user/: down.sql  up.sql
accounts/migrations/2022-05-01-060047_users/: down.sql  up.sql
accounts/src/: lib.rs  main.rs  redis.rs  schema.rs  server.rs
accounts/src/graphql/: config.rs  mod.rs  root_schema.rs  utils.rs
accounts/src/graphql/modules/: model.rs  resolver.rs  schema.rs
apollo-gateway/: Dockerfile  README.md  index.js  package-lock.json  package.json
common_utils/: Cargo.toml
common_utils/src/: error_extension.rs  lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/assets/: index.html  shop.html
frontend/assets/css/: shop.css  styles.css
frontend/assets/graphql/: schema.graphql
frontend/assets/img/: products.json
frontend/assets/js/: main.js
frontend/src/: app.rs  main.rs
frontend/src/components/: collection.rs  feature.rs  footer.rs  header.rs  mod.rs  navbar.rs  newsletter.rs  product_img_list.rs  product_info.rs  product_list.rs  product_review.rs  productlist.rs  register_user.rs  review_list.rs  text_area.rs  womens.rs
frontend/src/graphql/: get_all_user.graphql  mod.rs  mutation.graphql  mutation.rs  queries.graphql  queries.rs  schema.graphql
frontend/src/graphql/accounts/: queries.rs
frontend/src/hooks/: mod.rs  queries.rs  use_query.rs
frontend/src/models/: mod.rs  products.rs  reviews.rs  user.rs  utils.rs
frontend/src/router/: dev_product.rs  featurepage.rs  home.rs  mod.rs  product_detail.rs  profile_page.rs
inventory/: .env  Cargo.toml  Dockerfile
inventory/migrations/2022-04-28-021721_inventories/: down.sql  up.sql
inventory/src/: main.rs  schema.rs
inventory/src/graphql/: root_schema.rs
payments/: .env  Cargo.toml
payments/src/: main.rs
products/: .env  Cargo.toml  Dockerfile
products/src/: main.rs  redis.rs  schema.rs  server.rs
products/src/graphql/: root_schema.rs
reviews/: .env  Cargo.toml  Dockerfile
reviews/migrations/2022-04-27-035421_reviews/: down.sql  up.sql
reviews/migrations/2022-05-03-225033_add_additonal_info/: down.sql  up.sql
reviews/migrations/2022-05-03-232849_add_created_at/: down.sql  up.sql
reviews/migrations/2022-05-05-060254_add_user_ratings/: down.sql  up.sql
reviews/src/: lib.rs  main.rs  schema.rs
reviews/src/graphql/: root_schema.rs
(+9 files in other folders)
